# insightfulmessages

./: README.md  pyproject.toml
insightfulmessages/: __init__.py  insightfulmessages.py  insightfulmessages_dicom.py  insightfulmessages_load.py
tests/: test_dicom_message.py
